Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-126330

Crash when resizing ListView with reuseItems: true and custom QQuickAsyncImageProvider

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: P1: Critical P1: Critical
    • 6.5.7, 6.7.3, 6.8.0 Beta2, 6.9.0 FF
    • 6.7.1
    • Quick: Controls 2
    • None
    • Operating System: openSUSE Tumbleweed 20240609
      KDE Plasma Version: 6.0.5
      KDE Frameworks Version: 6.3.0
      Qt Version: 6.7.1
      Kernel Version: 6.9.3-1-default (64-bit)
      Graphics Platform: Wayland
    • Linux/Wayland
    • 6c10efaa5 (dev), 8d91d55fe (6.8), 216bac464 (6.7), 41d048201 (tqtc/lts-6.5)

      1. Build & run the attached project
      2. Scroll the ListView
      3. Change the width of the ListView
      4. Crash

      Also see the attached backtrace

       

      I have tested this with Basic, Imagine, Material, and Universal styles and all of them crash. I'm guessing this is an issue with QQuickIcon, because I also tested with KDE's qqc2-breeze-style and qqc2-desktop-style which don't crash, and these both use Kirigami.Icon for their ItemDelegates instead.

        For Gerrit Dashboard: QTBUG-126330
        # Subject Branch Project Status CR V

            qt.team.quick.subscriptions Qt Quick and Widgets Team
            jackh Jack Hill
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes