Prevent nullptr qmlEngine for loading

When using reuseItems in ListView, qmlEngine can return nullptr for
cached items.

Pick-to: 6.5
Fixes: QTBUG-126330
Change-Id: I757c2df71b99a46c6fb1d76d247d0953c322df03
Reviewed-by: Volker Hilsheimer <volker.hilsheimer@qt.io>
(cherry picked from commit 6c10efaa5242f80de3cf93ea8cde65bda157fb63)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>
(cherry picked from commit 8d91d55fe9dd43a1dffecf89db8aa830478386c2)